--- a/CharacterManager.WebMVC/Views/Character/Delete.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Delete.cshtml
@@ -48,7 +48,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to Character", "Details", new { id = Model.CharacterId })
         </div>
     }
 </div>
