--- a/CharacterManager.WebMVC/Views/Inventory/Delete.cshtml
+++ b/CharacterManager.WebMVC/Views/Inventory/Delete.cshtml
@@ -8,7 +8,6 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>InventoryItemDetail</h4>
     <hr />
     <dl class="dl-horizontal">
 
@@ -47,7 +46,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Index", new { id = Model.CharacterId })
         </div>
     }
 </div>
